[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nircls"
version = "0.1.0"
description = "NIR Species Classification Toolkit (CLI + pipelines + reports)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy","pandas","scikit-learn>=1.3","scipy","matplotlib","seaborn","pyyaml","rich","joblib","openpyxl","tqdm"
]

[project.scripts]
nircls = "nircls.cli:main"
